--- a/src/scss/06-components/_card.scss
+++ b/src/scss/06-components/_card.scss
@@ -146,7 +146,7 @@ $sp_card-border-radius: rem(2);
 
   // useful to set tags overflow
   /* stylelint-disable */
-  max-width: calc(100% - $sp_variable-m * 2);
+  max-width: calc(100% - #{$sp_variable-m * 2});
   /* stylelint-enable */
 }
 
